--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <title>HTML Academy: Пинк</title>
   </head>
   <body>
-    <header>
-      <div class="mobile-menu">
+    <header class="main-header">
+      <div class="main-menu">
         <div class="logo">
           <img src="http://placehold.it/75x22">
         </div>
-        <button class="mobile-menu__close" title="Закрыть">Закрыть</button>
-        <ul class="mobile-menu__items">
+        <button class="main-menu__close" title="Закрыть">Закрыть</button>
+        <ul class="main-menu__items">
           <li>
             <a href="#">Главная</a>
           </li>
@@ -25,13 +25,6 @@
             <a href="#">HTML Academy</a>
           </li>
         </ul>
-      </div>
-      <div class="top-menu">
-        <div class="logo">
-          <img src="http://placehold.it/75x22">
-        </div>
-        <div class="top-menu__menu-burger">
-        </div>
       </div>
     </header>
     <main>
