--- a/form.html
+++ b/form.html
@@ -7,10 +7,8 @@
   <body>
     <header class="main-header">
       <div class="main-menu">
-        <div class="logo">
-          <img src="http://placehold.it/75x22">
-        </div>
-        <button class="main-menu__close" title="Закрыть">Закрыть</button>
+        <a class="logo" href="#">pink</a>
+        <button class="main-menu__switch" title="Закрыть">Закрыть</button>
         <ul class="main-menu__items">
           <li>
             <a href="#">Главная</a>
@@ -51,27 +49,27 @@
           </div>
           <h2 class="forms__header">Ваши безбашенные достижения в путешествии</h2>
           <div class="forms__item-progress">
-            <input class="forms__progress-checkbox" id="selfie-id" type="checkbox" name="selfie" checked>
+            <input class="forms__checkbox" id="selfie-id" type="checkbox" name="selfie" checked>
             <label for="selfie-id">Сделал селфи с акулой</label>
           </div>
           <div class="forms__item-progress">
-            <input class="forms__progress-checkbox" id="beach-id" type="checkbox" name="beach" checked>
+            <input class="forms__checkbox" id="beach-id" type="checkbox" name="beach" checked>
             <label for="beach-id">Обгорел на пляже</label>
           </div>
           <div class="forms__item-progress">
-            <input class="forms__progress-checkbox" id="chak-norris-id" type="checkbox" name="chak-norris">
+            <input class="forms__checkbox" id="chak-norris-id" type="checkbox" name="chak-norris">
             <label for="chak-norris-id">Видел Чака Норриса</label>
           </div>
           <div class="forms__item-progress">
-            <input class="forms__progress-checkbox" id="souvenirs-id" type="checkbox" name="souvenirs">
+            <input class="forms__checkbox" id="souvenirs-id" type="checkbox" name="souvenirs">
             <label for="souvenirs-id">Накупил сувениров</label>
           </div>
           <div class="forms__item-progress">
-            <input class="forms__progress-checkbox" id="tower-id" type="checkbox" name="tower" checked>
+            <input class="forms__checkbox" id="tower-id" type="checkbox" name="tower" checked>
             <label for="tower-id">Удержал башню</label>
           </div>
           <div class="forms__item-progress">
-            <input class="forms__progress-checkbox" id="hotel-id" type="checkbox" name="hotel">
+            <input class="forms__checkbox" id="hotel-id" type="checkbox" name="hotel">
             <label for="hotel-id">Разгромил отель</label>
           </div>
           <div class="forms__textfield">
@@ -100,7 +98,7 @@
           <h2 class="forms__header">Опишите свои эмоции</h2>
           <div class="forms__commit">
             <textarea class="forms__textarea" name="commit-field" id="textarea-id" rows="6" cols="48"></textarea>
-            <label for="id-email">Можно прям в красках, не стесняясь в выражениях</label>
+            <label for="textarea-id">Можно прям в красках, не стесняясь в выражениях</label>
           </div>
           <input class="forms__btn-send" type="submit" name="btn-send" value="Отправить форму">
         </form>
@@ -112,9 +110,9 @@
         <img src="http://placehold.it/147x40">
       </div>
       <div class="social">
-        <a class="social__btn social__btn_twitter" href="#">twitter</a>
-        <a class="social__btn social__btn_facebook" href="#">facebook</a>
-        <a class="social__btn social__btn_youtube" href="#">youtube</a>
+        <a class="social__btn social__btn--twitter" href="#">twitter</a>
+        <a class="social__btn social__btn--facebook" href="#">facebook</a>
+        <a class="social__btn social__btn--youtube" href="#">youtube</a>
       </div>
       <div class="footer-copyright">
         <p>Разработано</p>
