--- a/index.html
+++ b/index.html
@@ -7,10 +7,8 @@
   <body>
     <header class="main-header">
       <div class="main-menu">
-        <div class="logo">
-          <img src="http://placehold.it/75x22">
-        </div>
-        <button class="main-menu__close" title="Закрыть">Закрыть</button>
+        <a class="logo" href="#">pink</a>
+        <button class="main-menu__switch" title="Закрыть">Закрыть</button>
         <ul class="main-menu__items">
           <li>
             <a href="#">Главная</a>
@@ -29,70 +27,77 @@
     </header>
     <main>
       <div class="intro">
-        <button class="intro__download" title="Скачать">Скачать приложение</button>
+        <a class="intro__download" title="Скачать">Скачать приложение</a>
         <div class="intro__intro-logo">
-          <img src="http://placehold.it/47x56">
-          <img src="http://placehold.it/47x56">
-          <img src="http://placehold.it/47x56">
+          <div class="intro__intro-logo intro__intro-logo--apple"></div>
+          <div class="intro__intro-logo intro__intro-logo--apple"></div>
+          <div class="intro__intro-logo intro__intro-logo--apple"></div>
         </div>
         <p class="intro__message">Доступно для iPhone, iPad, Android, Windows Phone, OS X, Window</p>
       </div>
       <div class="information">
-        <h1 class="information__h1">Устали от серости мегаполиса?</h1>
-        <h1 class="information__h1">Нам есть, что вам  предложить!</h1>
-        <h2 class="information__h2">Поднимает настроение</h2>
+        <h2 class="information__h2">Устали от серости мегаполиса?</h2>
+        <h2 class="information__h2">Нам есть, что вам  предложить!</h2>
+        <h3 class="information__h3">Поднимает настроение</h3>
         <p class="information__item">Поднимает настроение  Приложение позволит вам победить осеннюю хандру и депрессию буквально в несколько кликов!</p>
-        <h2 class="information__h2">Меняет мир вокруг</h2>
+        <h3 class="information__h3">Меняет мир вокруг</h3>
         <p class="information__item">Меняет мир вокруг  Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
-        <h2 class="information__h2">Заводит новых друзей</h2>
+        <h3 class="information__h3">Заводит новых друзей</h3>
         <p class="information__item">Ставьте лайки, комментируте, делитесь фотографиями с друзьями и заводите новых</p>
         <img src="http://placehold.it/157x320">
       </div>
       <div class="review">
-        <h2 class="review__h2">Николай Петров</h2>
+        <h3 class="review__h3">Николай Петров</h3>
         <p class="review__item">"Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!"</p>
+        <input type="radio" id="btn-1" name="toggle" checked>
+        <input type="radio" id="btn-2" name="toggle">
+        <input type="radio" id="btn-3" name="toggle">
         <div class="slider-controls">
-          <input type="radio" id="btn-1" name="toggle" checked>
-          <input type="radio" id="btn-2" name="toggle">
-          <input type="radio" id="btn-3" name="toggle">
-          <label for="btn-1"></label>
-          <label for="btn-2"></label>
-          <label for="btn-3"></label>
+          <label for="btn-1">&bull;</label>
+          <label for="btn-2">&bull;</label>
+          <label for="btn-3">&bull;</label>
         </div>
         <div class="price">
           <div class="price__logo">
             <h2 class="price__h2">Стандарт</h2>
             <p class="price__item">3,99 USD</p>
-            <ul class="price__list">
-              <li>Розовый фильтр</li>
-              <li>Смайлики</li>
-              <li>Комментарии</li>
-            </ul>
+            <table class="price__list">
+              <tr>
+                <td>Розовый фильтр</td>
+                <td></td>
+              </tr>
+              <tr>
+                <td>Смайлики</td>
+                <td></td>
+              </tr>
+              <tr>
+                <td>Комментарии</td>
+                <td></td>
+              </tr>
+            <table>
           </div>
+          <input type="radio" id="btn-4" name="toggle-2">
+          <input type="radio" id="btn-5" name="toggle-2"checked>
+          <input type="radio" id="btn-6" name="toggle-2">
           <div class="slider-controls">
-            <input type="radio" id="btn-4" name="toggle" checked>
-            <input type="radio" id="btn-5" name="toggle">
-            <input type="radio" id="btn-6" name="toggle">
-            <label for="btn-4"></label>
-            <label for="btn-5"></label>
-            <label for="btn-6"></label>
+            <label for="btn-4">&bull;</label>
+            <label for="btn-5">&bull;</label>
+            <label for="btn-6">&bull;</label>
           </div>
         </div>
       </div>
       <div class="feedback">
-        <h1 class="feedback__h1">Остались вопросы? Свяжитесь с нами!</h1>
-        <h2 class="feedback__h2">Звоните:</h2>
+        <h2 class="feedback__h2">Остались вопросы? Свяжитесь с нами!</h2>
+        <h3 class="feedback__h3">Звоните:</h3>
         <p class="feedback__item">+7 (812) 555-66-66</p>
-        <h2 class="feedback__h2">Пишите:</h2>
-        <p class="feedback__item">mail@htmlacademy.ru</p>
-        <h2 class="feedback__h2">Приезжайте в гости:</h2>
+        <h3 class="feedback__h3">Пишите:</h3>
+        <a class="feedback__item" href="#">mail@htmlacademy.ru</a>
+        <h3 class="feedback__h3">Приезжайте в гости:</h3>
         <p class="feedback__item">ул. Большая Конюшенная, 19/8</p>
       </div>
       <div class="content-map">
         <img src="http://placehold.it/320x123">
       </div>
     </main>
-    <footer>
-    </footer>
   </body>
 </html>
