Исправление файла photo

--- a/photo.html
+++ b/photo.html
@@ -27,7 +27,7 @@
     </header>
     <main>
       <h1 class="photo-header">Фотографии пользователей</h1>
-      <h2 class="photo-header2">Взгляните на фотографии, которые выкладывают пользователи! Видите, как не хватает ваших?</h2>
+      <h2 class="photo-header__h2">Взгляните на фотографии, которые выкладывают пользователи! Видите, как не хватает ваших?</h2>
       <section class="photo">
         <div class="photo__item">
           <img src="http://placehold.it/280x180">
@@ -107,7 +107,7 @@
           </div>
         </div>
       </section>
-      <h2 class="photo-header2">Затмите их всех! Выкладывайте все, что накопилось в телефоне!</h2>
+      <h2 class="photo-header__h2">Затмите их всех! Выкладывайте все, что накопилось в телефоне!</h2>
       <div class="upload-image">
         <img src="http://placehold.it/280x347">
         <div class="upload-image__filters">
