--- a/photo.html
+++ b/photo.html
@@ -11,16 +11,16 @@
         <button class="main-menu__switch" title="Закрыть">Закрыть</button>
         <ul class="main-menu__items">
           <li>
-            <a href="#">Главная</a>
+            <a href="index.html">Главная</a>
           </li>
           <li>
-            <a href="#">Фотографии</a>
+            <a href="photo.html">Фотографии</a>
           </li>
           <li>
-            <a href="#">Конкурс</a>
+            <a href="form.html">Конкурс</a>
           </li>
           <li>
-            <a href="#">HTML Academy</a>
+            <a href="http://htmlacademy.ru">HTML Academy</a>
           </li>
         </ul>
       </div>
