--- a/index.html
+++ b/index.html
@@ -10,23 +10,23 @@
       <nav class="main-nav">
         <a class="logo" href="#"></a>
         <button class="main-nav__switch main-nav__switch--burger" title="Закрыть"></button>
+        <div class="main-menu">
+          <ul class="main-menu__items">
+            <li>
+              <a href="index.html">Главная</a>
+            </li>
+            <li>
+              <a href="photo.html">Фотографии</a>
+            </li>
+            <li>
+              <a href="form.html">Конкурс</a>
+            </li>
+            <li>
+              <a href="http://htmlacademy.ru">HTML Academy</a>
+            </li>
+          </ul>
+        </div>
       </nav>
-      <div class="main-menu">
-        <ul class="main-menu__items">
-          <li>
-            <a href="index.html">Главная</a>
-          </li>
-          <li>
-            <a href="photo.html">Фотографии</a>
-          </li>
-          <li>
-            <a href="form.html">Конкурс</a>
-          </li>
-          <li>
-            <a href="http://htmlacademy.ru">HTML Academy</a>
-          </li>
-        </ul>
-      </div>
     </header>
     <main class="page-main">
       <div class="intro">
@@ -155,5 +155,17 @@
       </div>
       <div class="content-map"></div>
     </main>
+    <footer class="main-footer">
+      <div class="logo logo--footer"></div>
+      <div class="social">
+        <a class="social__btn social__btn--twitter" href="#">twitter</a>
+        <a class="social__btn social__btn--facebook" href="#">facebook</a>
+        <a class="social__btn social__btn--youtube" href="#">youtube</a>
+      </div>
+      <div class="footer-copyright">
+        <p class="footer-copyright__p">Разработано</p>
+        <a class="footer-copyright__academy-logo" href="https://htmlacademy.ru">HTML Academy</a>
+      </div>
+    </footer>
   </body>
 </html>
