Верстка таблички-слайдера в мобильной версии главной страницы

--- a/index.html
+++ b/index.html
@@ -100,31 +100,59 @@
             <input type="radio" id="btn-4" name="toggle-2">
             <input type="radio" id="btn-5" name="toggle-2"checked>
             <input type="radio" id="btn-6" name="toggle-2">
-            <div class="slider__inner">
+            <div class="slider__inner slider__inner--table">
               <div class="slider__slides">
                   <table class="price__list">
                     <tr>
-                      <th><span>База</span> 1,99 USD</th>
-                      <th><span>Стандарт</span> 3,99 USD</th>
-                      <th><span>Анлим</span> 9,99 USD</th>
+                      <th></th>
+                      <th><span class="price__th">База</span><br>1,99 USD</th>
+                      <th class="price__hit"><span class="price__th">Стандарт</span><br>3,99 USD</th>
+                      <th><span class="price__th">Анлим</span><br>9,99 USD</th>
                     </tr>
                     <tr>
                       <td>Розовый фильтр</td>
-                      <td></td>
-                      <td></td>
-                      <td></td>
+                      <td>
+                        <span class="price__filters">Розовый фильтр</span>
+                        <div class="price__icon price__icon--yes"></div>
+                      </td>
+                      <td>
+                        <span class="price__filters">Розовый фильтр</span>
+                        <div class="price__icon price__icon--yes"></div>
+                      </td>
+                      <td>
+                        <span class="price__filters">Розовый фильтр</span>
+                        <div class="price__icon price__icon--yes"></div>
+                      </td>
                     </tr>
                     <tr>
                       <td>Смайлики</td>
-                      <td></td>
-                      <td></td>
-                      <td></td>
+                      <td>
+                        <span class="price__filters">Смайлики</span>
+                        <div class="price__icon price__icon--no"></div>
+                      </td>
+                      <td>
+                        <span class="price__filters">Смайлики</span>
+                        <div class="price__icon price__icon--yes"></div>
+                      </td>
+                      <td>
+                        <span class="price__filters">Смайлики</span>
+                        <div class="price__icon price__icon--yes"></div>
+                      </td>
                     </tr>
                     <tr>
                       <td>Комментарии</td>
-                      <td></td>
-                      <td></td>
-                      <td></td>
+                      <td>
+                        <span class="price__filters">Комментарии</span>
+                        <div class="price__icon price__icon--no"></div>
+                      </td>
+                      <td>
+                        <span class="price__filters">Комментарии</span>
+                        <div class="price__icon price__icon--no"></div>
+                      </td>
+                      <td>
+                        <span class="price__filters">Комментарии</span>
+                        <div class="price__icon price__icon--yes"></div>
+                      </td>
                     </tr>
                   </table>
                 </div>
