Верстка таблицы на планшетной версии

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                   </table>
                 </div>
               </div>
-              <div class="slider__controls">
+              <div class="slider__controls slider__controls--table">
                 <label for="btn-4"></label>
                 <label for="btn-5"></label>
                 <label for="btn-6"></label>
