верстка страницы формы

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <header class="main-header">
       <nav class="main-nav">
         <a class="logo" href="#"></a>
-        <button class="main-nav__switch main-nav__switch--burger" title="Закрыть"></button>
+        <button class="main-nav__switch main-nav__switch--cross" title="Закрыть"></button>
         <div class="main-menu">
           <ul class="main-menu__items">
             <li>
@@ -48,15 +48,21 @@
           <h2 class="information__h2">Нам есть, что вам  предложить!</h2>
         </div>
         <div class="information__features">
-          <div class="information__image information__image--item1"></div>
-          <h3 class="information__h3">Поднимает настроение</h3>
-          <p class="information__item">Приложение позволит вам победить осеннюю хандру и депрессию буквально в несколько кликов!</p>
-          <div class="information__image information__image--item2"></div>
-          <h3 class="information__h3">Меняет мир вокруг</h3>
-          <p class="information__item">Меняет мир вокруг  Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
-          <div class="information__image information__image--item3"></div>
-          <h3 class="information__h3">Заводит новых друзей</h3>
-          <p class="information__item">Ставьте лайки, комментируте, делитесь фотографиями с друзьями и заводите новых</p>
+          <div class="information__wrapper">
+            <div class="information__image information__image--item1"></div>
+            <h3 class="information__h3">Поднимает настроение</h3>
+            <p class="information__item">Приложение позволит вам победить осеннюю хандру и депрессию буквально в несколько кликов!</p>
+          </div>
+          <div class="information__wrapper">
+            <div class="information__image information__image--item2"></div>
+            <h3 class="information__h3">Меняет мир вокруг</h3>
+            <p class="information__item">Меняет мир вокруг  Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
+          </div>
+          <div class="information__wrapper">
+            <div class="information__image information__image--item3"></div>
+            <h3 class="information__h3">Заводит новых друзей</h3>
+            <p class="information__item">Ставьте лайки, комментируте, делитесь фотографиями с друзьями и заводите новых</p>
+          </div>
         </div>
       </div>
       <div class="diagram">
@@ -183,7 +189,7 @@
       </div>
       <div class="content-map"></div>
     </main>
-    <footer class="main-footer">
+    <footer class="main-footer main-footer--closed">
       <div class="logo logo--footer"></div>
       <div class="social">
         <a class="social__btn social__btn--twitter" href="#">twitter</a>
