верстка стрифицы с формами и страницы ч фотографиями

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
       </div>
       <div class="content-map"></div>
     </main>
-    <footer class="main-footer main-footer--closed">
+    <footer class="main-footer main-footer--main-page">
       <div class="logo logo--footer"></div>
       <div class="social">
         <a class="social__btn social__btn--twitter" href="#">twitter</a>
