Доделывание главной страницы. Мобильная и десктопная версии

--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
             <div class="intro__intro-logo intro__intro-logo--android"></div>
             <div class="intro__intro-logo intro__intro-logo--windows"></div>
           </div>
-          <p class="intro__message">Доступно для iPhone, iPad, Android, Windows Phone, OS X, Window</p>
+          <p class="intro__message">Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</p>
         </div>
       </div>
       <div class="information">
         <div class="information__header">
-          <h2 class="information__h2">Устали от серости мегаполиса?
-          <h2 class="information__h2">Нам есть, что вам  предложить!</h2>
+          <h2 class="information__h2">Устали от серости мегаполиса?</h2>
+          <h2 class="information__h2">Нам есть, что вам<br>предложить!</h2>
         </div>
         <div class="information__features">
           <div class="information__wrapper">
@@ -56,7 +56,7 @@
           <div class="information__wrapper">
             <div class="information__image information__image--item2"></div>
             <h3 class="information__h3">Меняет мир вокруг</h3>
-            <p class="information__item">Меняет мир вокруг  Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
+            <p class="information__item">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
           </div>
           <div class="information__wrapper">
             <div class="information__image information__image--item3"></div>
@@ -80,17 +80,17 @@
               <div class="review__slide1">
                 <h3 class="review__h3">Николай Петров</h3>
                 <p class="review__about">25 лет, водитель трамвая</p>
-                <p class="review__item">"Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!"</p>
+                <p class="review__item">&laquo;Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!&raquo;</p>
               </div>
               <div class="review__slide2">
                 <h3 class="review__h3">Василий Чапаев</h3>
                 <p class="review__about">Красный командир</p>
-                <p class="review__item">"Это просто праздник какой-то!"</p>
+                <p class="review__item">&laquo;Это просто праздник какой-то!&raquo;</p>
               </div>
               <div class="review__slide3">
                 <h3 class="review__h3">Иван Петров</h3>
                 <p class="review__about">Неизвестный</p>
-                <p class="review__item">"Мы не пашем, не сеим, не стрим! Мы гордимся общественным строем!"</p>
+                <p class="review__item">&laquo;Мы не пашем, не сеим, не стрим! Мы гордимся общественным строем!&raquo;</p>
               </div>
             </div>
           </div>
@@ -112,7 +112,7 @@
                     <tr>
                       <th></th>
                       <th><span class="price__th">База</span><br>1,99 USD</th>
-                      <th class="price__hit"><span class="price__th">Стандарт</span><br>3,99 USD</th>
+                      <th><span class="price__th price__hit">Стандарт</span><br>3,99 USD</th>
                       <th><span class="price__th">Анлим</span><br>9,99 USD</th>
                     </tr>
                     <tr>
