Верстка главной страницы

--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
         </div>
       </div>
       <div class="diagram">
-        <h2 class="diagram__h2">Эффект на 24 часа!</h2>
-        <p class="diagram__item">Британские ученые провели исследования и доказали, что положительный эффект от использования приложения длится целые сутки!</p>
+        <h2 class="diagram__h2">Эффект<br>на 24 часа!</h2>
+        <p class="diagram__item">Британские ученые провели исследования и доказали, что положительный эффект<br>от использования приложения длится целые сутки!</p>
         <a class="diagram__link" href="#">Узнать больше об исследовании</a>
       </div>
       <div class="review">
